  See menu File --> Find Preference

Update Commons Lang library to version 3.12.0,
  see https://commons.apache.org/proper/commons-lang/

Main application toolbar: Replaced the former Aliases and Session combo boxes by toolbar buttons
  which display popup menus to select Aliases and Session respectively.

Removed dependencies on outdated Hibernate libraries (3.2.4.sp1).


Bug fixes:

#1501 Copy as WIKI Table - JIRA/Confluence --> Values containing "|" were not correctly escaped.

#1500 SQL Parametrisation Plugin: Quote values check box will always be enabled/active.

Fixed scrolling behaviour of scrollable popup menus when up/down keys were used.

Command line mode: Java process didn't properly end when SQL was executed on command line.
  Example on Windows: <squirrel-home>\squirrelcli\squirrelcli.bat -alias "yourAlias" -sql "SELECT * FROM <yourTable>"



4.4.0 (04/06/2021)
==================

Enhancements:

Look and Feel plugin:
  - Upgrade FlatLaF to 2.1
  - Increased stability installing FlatLaF
  - About dialog shows the currently installed Look and Feel

Intersystems Cache Plugin: View source are displayed in Object tree details.

Introduced Java 18 compatibility.

Hibernate Plugin:
  New button in Hibernate configuration "Add classpath from clipboard"
  which reads classpath entries from clipboard. The entries may be
  separated by OS dependent classpath separators and/or newlines.
  File --> Global Preferences --> Tab Hibernate --> See below classpath entry list.

Saved Sessions, three new buttons at the right of application (topmost) toolbar:
  The Saved Session feature allows to save and restore all SQL editors of a Session at once.
  Saved Session are especially useful when working with additional SQL Tabs or SQL Worksheets.
  SQL editors with open files are saved by saving the files and referencing them from the Saved Session.
  SQL editors without open files are saved internally.